k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: conn
